--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,4 +77,7 @@ dependencies {
         exclude group: 'org.apache.maven.surefire', module: 'common-java'
         exclude group: 'org.apache.maven.surefire', module: 'surefire-api'
     }
+
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2"
 }
